# extract-qt-resources

./: .gitignore  README.md  build.fsx
.devcontainer/: devcontainer.json
ExtractQtResources/: ExtractQtResources.fs  ExtractQtResources.fsproj
src/ExtractQtResources/: ExtractQtResources.fsproj  Parser.fs  Program.fs
src/ExtractQtResources.Tests/: ExtractQtResources.Tests.fsproj
src/ExtractQtResources.Tests/TestData/: qtsample
src/ExtractQtResources.Tests/TestData/qtsample/: CMakeLists.txt  qtsample  resources.qrc
src/ExtractQtResources.Tests/TestData/qtsample-src/: CMakeLists.txt  README.md  main.cpp
